# Simulation-Generator

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_users.py  0003_simulation_images.py  0004_engine_version.py  0005_dimension_width.py  0006_drop_debrief.py
app/: __init__.py  auth.py  config.py  db.py  main.py
app/api/: __init__.py  auth.py  authoring.py  deps.py  groups.py  runtime.py  schemas.py
app/debrief/: __init__.py  writer.py
app/jobs/: __init__.py  checkpoint_codec.py  checkpointer.py  runner.py
app/llm/: __init__.py  anthropic_provider.py  call.py  mock_provider.py  openai_provider.py  provider.py
app/models/: __init__.py  _types.py
app/pipeline/: __init__.py  archetypes.py  assemble.py  common.py  critic.py  decision_focus.py  decisions.py  normalize.py  orchestrator.py  reduce.py  reflection_spec.py  roles.py  teams.py  type_set.py  world.py
app/prompts/: __init__.py
app/safety/: __init__.py  injection.py  pii.py
app/schemas/: __init__.py  common.py  content.py  input.py  metadata.py  runtime.py  scoring.py
app/scoring/: __init__.py  engine.py  group.py
app/services/: __init__.py  cloudinary_service.py  (+7 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: __init__.py  create_tenant.py  create_user.py  init_db.py
tests/: conftest.py  test_api.py  test_group.py  test_pipeline_mock.py  test_schemas.py  test_scoring.py  test_validation_gates.py
(+24 files in other folders)
